--- a/pulseview.spec.template
+++ b/pulseview.spec.template
@@ -14,12 +14,17 @@ BuildRequires:  desktop-file-utils
 BuildRequires:  gcc-c++
 BuildRequires:  libappstream-glib
 BuildRequires:  boost-devel
-BuildRequires:  qt5-devel
+BuildRequires:  qt5-linguist
+BuildRequires:  qt5-qtbase-devel
+BuildRequires:  qt5-qtsvg-devel
 BuildRequires:  pkgconfig(libsigrokcxx)
 BuildRequires:  pkgconfig(libsigrokdecode)
 
 Requires:       hicolor-icon-theme
 Requires:       qt5-qttranslations
+# https://bugzilla.redhat.com/show_bug.cgi?id=1819609
+# needed for plugins that handle displaying SVG graphics
+Requires:       qt5-qtsvg
 
 %description
 PulseView is an application for enabling data acquisition and analysis with
@@ -63,6 +68,7 @@ appstream-util validate-relax --nonet %{buildroot}/%{_datadir}/appdata/*.appdata
 %changelog
 * Sat Nov 7 2020 Aimylios <aimylios@xxx.xx>
 - Update usage of cmake macros
+- Update dependencies on qt5
 
 * Fri May 1 2020 Aimylios <aimylios@xxx.xx>
 - Add qt5-qttranslations as runtime dependency
