--- a/sigrok-cli.spec.template
+++ b/sigrok-cli.spec.template
@@ -10,6 +10,7 @@ Source0:        %{name}-%{version}.tar.gz
 
 BuildRequires:  automake
 BuildRequires:  gcc
+BuildRequires:  make
 BuildRequires:  pkgconfig(glib-2.0)
 BuildRequires:  pkgconfig(libsigrok)
 BuildRequires:  pkgconfig(libsigrokdecode)
@@ -47,6 +48,7 @@ find %{buildroot} -name '*.la' -exec rm -f {} ';'
 %changelog
 * Tue Feb 16 2021 Aimylios <aimylios@xxx.xx>
 - Correctly package license and documentation
+- Add new dependencies
 
 * Sun Aug 5 2018 Aimylios <aimylios@xxx.xx>
 - Initial release based on 0.7.0-5.fc29
