Add nettle as build-time dependency to libsigrok
nettle is an optional dependency, but it is required to build the
rdtech-tc driver.

--- a/libsigrok.spec.template
+++ b/libsigrok.spec.template
@@ -26,6 +26,7 @@ BuildRequires:  libtool
 BuildRequires:  libusb1-devel
 BuildRequires:  libzip-devel
 BuildRequires:  make
+BuildRequires:  nettle-devel
 BuildRequires:  zlib-devel
 
 %description
